# makai_challenge

./: .dockerignore  .gitignore  CHALLENGE_DELIVERABLE.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: app.py
apps/api/services/: jobs.py
apps/notifier/: dispatcher.py  factory.py
apps/notifier/providers/: base.py  webhook.py
apps/worker/: consumer.py  main.py  processor.py
infrastructure/docker/: Dockerfile  api.Dockerfile  worker.Dockerfile
infrastructure/postgres/: init.sql
makai_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/db/: init_db.py  models.py  session.py
shared/db/repositories/: jobs.py
shared/domain/: auth.py  jobs.py
shared/mappers/: jobs.py
shared/queue/: messages.py  producer.py
shared/schemas/: jobs.py
tests/: conftest.py
tests/unit/: test_jobs_happy_path.py  test_jobs_state_transitions.py  test_jobs_validation.py  test_repository_jobs.py  test_webhook_notifier.py
